[package]
name = "snout"
version = "0.3.0"
authors = ["Kevin Brebanov <kevin.brebanov@gmail.com>"]
description = "Network packet sniffer that outputs packet headers in JSON format."
license = "MIT"

[dependencies]
clap = "2.26.2"
futures = "0.1.16"
tokio-core = "0.1.10"
pcap = { version = "0.7.0", features = ["tokio"] }
pnet = "0.19.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
dns-parser = "0.7.0"
